test/statsCases/parse-error/webpack.config.js
"use strict";

module.exports = {
	mode: "production",
	entry: "./index",
	stats: {
		timings: false,
		hash: false,
		modules: true,
		chunks: false
	}
};
